@@ -364,7 +364,7 @@ extern plugData*		globalPlugData;
 pageStruct* getPageStructPtr(int pagenum);
 void getMimeType(char* filepath,void* ptr);
 void setLanguage(pageStruct* page);
-void runCommand(char* commandtorun,void* ptr,bool interm,int flags,int useroot);
+void runCommand(char* commandtorun,void* ptr,bool interm,int flags,int useroot,char* title);
 functionData* getFunctionByName(char* name,bool recurse);
 void destroyData(functionData* fdata);
 void getRecursiveTagList(char* filepath,void* ptr);
