@@ -29,7 +29,7 @@ void regexFind(int dowhat);
 void searchQT5Docs(GtkWidget* widget,gpointer data);
 void qt5DocSearchFromBar(GtkWidget* widget,gpointer data);
 void seachGtkDocs(GtkWidget* widget,gpointer data);
-void showDocView(int howtodisplay,char* text);
+void showDocView(int howtodisplay,char* text,const char* title);
 void pasteFRClip(GtkWidget* widget,gpointer data);
 void doDoxy(GtkWidget* widget,long data);
 void doxyDocs(GtkWidget* widget,gpointer data);
