@@ -1,5 +1,5 @@
 
-SUBDIRS = KKEdit/app KKEdit/pole KKEdit/resources/plugs
+SUBDIRS = KKEdit/resources/plugs KKEdit/app KKEdit/pole
 
 remake:
 	$(shell ./remakesourcelist)
